# Add3DText

./: CMakeLists.txt  README.md
Add3DText/: CMakeLists.txt  qSlicerAdd3DTextModule.cxx  qSlicerAdd3DTextModule.h  qSlicerAdd3DTextModuleWidget.cxx  qSlicerAdd3DTextModuleWidget.h
Add3DText/Logic/: vtkSlicerAdd3DTextLogic.cxx  vtkSlicerAdd3DTextLogic.h
Add3DText/Resources/: qSlicerAdd3DTextModule.qrc
Add3DText/Resources/UI/: qSlicerAdd3DTextFooBarWidget.ui  qSlicerAdd3DTextModuleWidget.ui
Add3DText/Widgets/: qSlicerAdd3DTextFooBarWidget.cxx  qSlicerAdd3DTextFooBarWidget.h
